--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PORT=3000
 
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
 DB_USERNAME=mainServer
-DB_PASSWORD=vuwb3l9@2^%asdq
+DB_PASSWORD=akreorl%%wkreorl
 DB_DATABASE=todays
